--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  visibility: visible;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -272,7 +273,6 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
   height: 580px;
   min-width: 400px;
   min-height: 300px;
@@ -281,39 +281,76 @@ img {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  text-align: center;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.batton-modal {
+  position: absolute;
+  display: flex;
+  right: 8px;
+  top: 8px;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-form {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
 .modal-form input {
-  width: 100%;
+  width: 450px;
   padding: 12px;
   margin-bottom: 28px;
   background-color: inherit;
-  font-weight: normal;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 
 .modal-textarea {
+  position: relative;
+  display: flex;
   width: 100%;
   height: 120px;
   margin-bottom: 20px;
-  font-weight: normal;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
+  padding: 0;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 
+.form-label {
+  position: absolute;
+  font-weight: 700;
+  left: 42px;
+  bottom: 50%;
+  transform: translateY(-50%);
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+
+.textarea-label {
+  position: absolute;
+  font-weight: 700;
+  left: 42px;
+  bottom: 50%;
+
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+}
+
 .modal-title {
+  display: block;
   margin-top: 0;
   margin-bottom: 20px;
-  font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
@@ -321,8 +358,48 @@ img {
   color: #212121;
 }
 
+.label-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
 textarea {
   resize: none;
+}
+
+/*.modal-form input[type='checkbox'] {
+  width: 15px;
+  height: 15px;
+  align-items: center;
+  margin-right: 8px;
+  margin-left: 52px;
+}*/
+
+.icon-modal {
+  position: absolute;
+  display: block;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+  margin-right: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .form-label,
+.modal-input:not(:placeholder-shown) + .form-label {
+  transform: translate(-23px, -40px);
+  color: var(--accent-color);
+}
+.modal-input:focus ~ .icon-modal,
+.modal-input:not(:placeholder-shown) ~ .icon-modal {
+  fill: var(--accent-color);
+}
+.modal-input:focus,
+.modal-input:not(:placeholder-shown) {
+  border-color: var(--accent-color);
+  outline: none;
 }
 
 /*Секция*/
@@ -507,8 +584,9 @@ textarea {
 }
 
 .icon-social {
-  width: 20px;
-  height: 20px;
+  /*width: 20px;
+  height: 20px;*/
+  display: flex;
 }
 
 .icon-fone {
@@ -589,6 +667,7 @@ textarea {
   display: flex;
   justify-content: space-between;
 }
+
 .adress {
   display: block;
   margin-top: 20px;
@@ -632,9 +711,11 @@ textarea {
   margin-right: 10px;
   padding: 0;
 }
+
 .fone-links:last-child {
   margin: 0;
 }
+
 .links .fone-links {
   width: 44px;
   height: 44px;
@@ -693,10 +774,10 @@ textarea {
   width: 358px;
   padding: 15px 16px;
   background-color: inherit;
-  font-style: normal;
-  font-weight: normal;
+
+  font-weight: 400;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.25;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
