--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ img {
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url('../img/Header.jpg');
+    url('../img/header.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -285,6 +285,10 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form {
+  display: block;
+  text-align: center;
+}
 .batton-modal {
   position: absolute;
   display: flex;
@@ -302,52 +306,92 @@ img {
 
 .modal-form {
   position: relative;
-  display: flex;
-  align-items: center;
-}
-.modal-form input {
-  width: 450px;
-  padding: 12px;
   margin-bottom: 28px;
+  /*align-items: center;*/
+}
+
+.modal-input {
+  width: 100%;
+  padding: 12px 42px;
+  margin: 0;
   background-color: inherit;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-label {
+  position: absolute;
+  left: 42px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  cursor: pointer;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .form-label,
+.modal-input:not(:placeholder-shown) + .form-label {
+  transform: translate(-23px, -40px);
+  color: var(--bg-color-button);
+}
+
+.modal-input:focus,
+.modal-input:not(:placeholder-shown) {
+  border-color: var(--bg-color-button);
+  outline: none;
+}
+
+.modal-input:focus ~ .icon-modal,
+.modal-input:not(:placeholder-shown) ~ .icon-modal {
+  fill: var(--bg-color-button);
 }
 
 .modal-textarea {
   position: relative;
   display: flex;
-  width: 100%;
-  height: 120px;
-  margin-bottom: 20px;
-  padding: 0;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-
-.form-label {
-  position: absolute;
-  font-weight: 700;
-  left: 42px;
-  bottom: 50%;
-  transform: translateY(-50%);
-  line-height: 1.14;
-  letter-spacing: 0.01em;
 }
 
 .textarea-label {
   position: absolute;
-  font-weight: 700;
-  left: 42px;
-  bottom: 50%;
 
+  font-weight: 700;
+  left: 16px;
+  top: 12px;
   line-height: 1.14;
   letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.textarea-text {
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.textarea-text:focus + .textarea-label,
+.textarea-text:not(:placeholder-shown) + .textarea-label {
+  transform: translateY(-35px);
+  color: var(--accent-text-color);
+}
+.textarea-text:focus,
+.textarea-text:not(:placeholder-shown) {
+  border-color: var(--accent-text-color);
+  outline: none;
 }
 
 .modal-title {
-  display: block;
   margin-top: 0;
   margin-bottom: 20px;
   font-weight: 700;
@@ -363,6 +407,10 @@ img {
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.input-checkbox {
+  margin-right: 7px;
 }
 
 textarea {
@@ -385,21 +433,6 @@ textarea {
   left: 16px;
   margin-right: 8px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus + .form-label,
-.modal-input:not(:placeholder-shown) + .form-label {
-  transform: translate(-23px, -40px);
-  color: var(--accent-color);
-}
-.modal-input:focus ~ .icon-modal,
-.modal-input:not(:placeholder-shown) ~ .icon-modal {
-  fill: var(--accent-color);
-}
-.modal-input:focus,
-.modal-input:not(:placeholder-shown) {
-  border-color: var(--accent-color);
-  outline: none;
 }
 
 /*Секция*/
